; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_xmllint.c_myReallocFunc.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_xmllint.c_myReallocFunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@maxmem = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i64)* @myReallocFunc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @myReallocFunc(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load i64, i64* %5, align 8
  %9 = call i8* @xmlMemRealloc(i8* %7, i64 %8)
  store i8* %9, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %21

12:                                               ; preds = %2
  %13 = call i64 (...) @xmlMemUsed()
  %14 = load i64, i64* @maxmem, align 8
  %15 = icmp sgt i64 %13, %14
  br i1 %15, label %16, label %20

16:                                               ; preds = %12
  %17 = call i32 (...) @OOM()
  %18 = load i8*, i8** %6, align 8
  %19 = call i32 @xmlMemFree(i8* %18)
  store i8* null, i8** %3, align 8
  br label %23

20:                                               ; preds = %12
  br label %21

21:                                               ; preds = %20, %2
  %22 = load i8*, i8** %6, align 8
  store i8* %22, i8** %3, align 8
  br label %23

23:                                               ; preds = %21, %16
  %24 = load i8*, i8** %3, align 8
  ret i8* %24
}

declare dso_local i8* @xmlMemRealloc(i8*, i64) #1

declare dso_local i64 @xmlMemUsed(...) #1

declare dso_local i32 @OOM(...) #1

declare dso_local i32 @xmlMemFree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
